# finWeb-Scraper

./: LICENSE  README.md  news.py  pyproject.toml
.github/workflows/: pylint.yml
finweb_scraper/: news.py
finweb_scraper/utils/: __init__.py  async_requests.py  urlmining.py
utils/: urlmining.py
