[project]
name = "finweb-scraper"
version = "0.1.0"
description = "Stock Market web scraper"
authors = [
    {name = "LeomaxFilho",email = "leomax.filho@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry.group.docs]
optional = true
