[project]
name = "finweb-scraper"
version = "0.1.0"
description = "Stock Market web scraper"
authors = [
    {name = "LeomaxFilho",email = "leomax.filho@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "aiohttp (>=3.13.0,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
test = [
    "pytest (>=8.4.2,<9.0.0)"
]

[tool.poetry.group.docs]
optional = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
# This enables us to use CPY001: copyright header check
preview = true
# This enables us to use the explicit preview rules that we want only
explicit-preview-rules = true

ignore=[
    # do not assign a lambda expression, use a def
    "E731",
    # do not use variables named 'l', 'O', or 'I'
    "E741",
    # E721 gives many false positives.
    # Use `is` and `is not` for type comparisons, or `isinstance()` for
    # isinstance checks
    "E721",
    # We don't care much about F841.
    # Local variable ... is assigned to but never used
    "F841",
]
